...
        Text("DD").tag(CoordinateFormat.decimalDegrees)
        Text("DDM").tag(CoordinateFormat.degreesDecimalMinutes)
        Text("DMS").tag(CoordinateFormat.degreesMinutesSeconds)
        Text("UTM").tag(CoordinateFormat.utm)
        Text("MGRS").tag(CoordinateFormat.mgrs)
      }.pickerStyle(.segmented)
        .accessibilityIdentifier("coordinateFormatPicker")
        .padding(.bottom)

      if coordinateFormat == .utm {
        Spacer()
        UTMEntryView(coordinate: coordinate, onAccept: onAccept, onCancel: onCancel)
        Spacer()
...
